--- a/ShopManagement/Views/MainWindow.xaml
+++ b/ShopManagement/Views/MainWindow.xaml
@@ -2,6 +2,7 @@
     x:Class="ShopManagement.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:controls="clr-namespace:System.Windows.Controls;assembly=DotNetProjects.Input.Toolkit"
     xmlns:ctx="clr-namespace:ShopManagement.ViewModels"
     xmlns:ctx1="clr-namespace:ShopManagement.ViewModels"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -195,15 +196,21 @@
             Width="800"
             Height="785"
             Visibility="Visible">
+            <Grid.DataContext>
+                <ctx:CasierManagementVM />
+            </Grid.DataContext>
             <TextBlock
                 Height="30"
                 Margin="51,47,380,707"
                 FontSize="20"><Run Text="Introdu Numele sau Codul Produselor" /><Run Language="ro-ro" Text=":" /></TextBlock>
             <TextBox
+                x:Name="ProdusSearchBarTB"
                 Width="300"
-                Height="60"
+                Height="40"
                 Margin="51,82,449,642"
-                FontSize="25" />
+                FontSize="25"
+                Text="{Binding ProdusSearchText, Mode=TwoWay}"
+                TextAlignment="Center" />
             <TextBlock
                 Width="200"
                 Height="30"
@@ -222,7 +229,7 @@
                     Height="450"
                     HorizontalContentAlignment="Center"
                     Background="Transparent"
-                    ItemsSource="{Binding ProduseScanate}"
+                    ItemsSource="{Binding casierBL.ProduseBon}"
                     SelectionChanged="listBoxProduseScanate_SelectionChanged">
                     <ListBox.ItemTemplate>
                         <DataTemplate>
@@ -232,9 +239,24 @@
                                     <ColumnDefinition Width="*" />
                                     <ColumnDefinition Width="*" />
                                 </Grid.ColumnDefinitions>
-                                <TextBlock Grid.Column="0" Text="{Binding NumeProdus}" />
-                                <TextBlock Grid.Column="1" Text="{Binding NumarProduse}" />
-                                <TextBlock Grid.Column="2" Text="{Binding SumaTotala}" />
+                                <TextBlock
+                                    Grid.Column="0"
+                                    Width="150"
+                                    Height="30"
+                                    HorizontalAlignment="Left"
+                                    FontSize="20"
+                                    Text="{Binding Item1}" />
+                                <TextBlock
+                                    Grid.Column="1"
+                                    Width="120"
+                                    FontSize="20"
+                                    Text="{Binding Item2.Cantitate}" />
+                                <TextBlock
+                                    Grid.Column="2"
+                                    Width="50"
+                                    FontSize="20"
+                                    Text="{Binding Item2.Subtotal}"
+                                    TextAlignment="Right" />
                             </Grid>
                         </DataTemplate>
                     </ListBox.ItemTemplate>
@@ -248,20 +270,16 @@
                 FontSize="20"
                 Text="Total de plata:" />
 
-
-
             <TextBlock
-                Width="150"
                 Height="30"
-                Margin="308,675,22,79"
+                Margin="342,706,380,49"
                 FontSize="20"
-                Text="{Binding SumaTotalaProduseScanateCommand}" />
+                Text="{Binding casierBL.SumaTotalaProduseScanate}" />
             <Button
                 x:Name="btnAdaugaProdusBon"
                 Width="55"
                 Height="40"
                 Margin="365,92,380,653"
-                Click="btnAdaugaProdusBon_Click"
                 Command="{Binding CautaSiAdaugaProdusPeBonCommand}"
                 FontSize="15">
                 Adauga
@@ -278,7 +296,8 @@
                 Width="220"
                 Height="30"
                 Margin="480,241,100,0"
-                VerticalAlignment="Top" />
+                VerticalAlignment="Top"
+                Text="{Binding CategorieFiltrareText, Mode=TwoWay}" />
             <Button
                 x:Name="btnFiltreazaDupaCategorie"
                 Width="70"
@@ -299,7 +318,8 @@
                 Width="220"
                 Height="30"
                 Margin="480,311,100,0"
-                VerticalAlignment="Top" />
+                VerticalAlignment="Top"
+                Text="{Binding ProducatorFiltrareText, Mode=TwoWay}" />
             <Button
                 x:Name="btnFiltreazaDupaProducator"
                 Width="70"
@@ -320,7 +340,8 @@
                 Width="220"
                 Height="30"
                 Margin="480,381,100,0"
-                VerticalAlignment="Top" />
+                VerticalAlignment="Top"
+                Text="{Binding DataExpirareFiltrareText, Mode=TwoWay}" />
             <Button
                 x:Name="btnFiltreazaDupaDataExpirare"
                 Width="70"
